--- a/src/views/pages/roles.html
+++ b/src/views/pages/roles.html
@@ -102,16 +102,7 @@
                         <th>Acciones</th>
                     </tr>
                     </thead>
-                    <tbody id="rolesBody">
-                    <tr>
-                        <td>1</td>
-                        <td>Admin</td>
-                        <td>start.html, usuarios.html, roles.html</td>
-                        <td>
-                            <button class="btn btn-sm btn-secondary">Editar</button>
-                            <button class="btn btn-sm btn-secondary">Eliminar</button>
-                        </td>
-                    </tr>
+                    <tbody>
                     </tbody>
                 </table>
             </div>
