--- a/src/views/pages/usuarios.html
+++ b/src/views/pages/usuarios.html
@@ -94,37 +94,18 @@
             <!-- Fin Modal -->
 
             <div class="table-responsive">
-                <table id="usuariosTable" class="table table-hover table-bordered align-middle text-center">
+                <table id="usersTable" class="table table-hover table-bordered align-middle text-center">
                     <thead class="table-thead-color">
                     <tr>
                         <th>ID</th>
                         <th>Nombre</th>
                         <th>Correo</th>
-                        <th>Rol</th>
+                        <th>Rol ID</th>
+                        <th>Nombre Rol</th>
                         <th>Acciones</th>
                     </tr>
                     </thead>
-                    <tbody id="usuariosBody">
-                    <tr>
-                        <td>1</td>
-                        <td>Ana López</td>
-                        <td>ana@example.com</td>
-                        <td>Administrador</td>
-                        <td>
-                            <button class="btn btn-sm btn-secondary">Editar</button>
-                            <button class="btn btn-sm btn-secondary">Eliminar</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Juan Pérez</td>
-                        <td>juan@example.com</td>
-                        <td>Soporte</td>
-                        <td>
-                            <button class="btn btn-sm btn-secondary">Editar</button>
-                            <button class="btn btn-sm btn-secondary">Eliminar</button>
-                        </td>
-                    </tr>
+                    <tbody>
                     </tbody>
                 </table>
             </div>
