feat: se agrega fetch a tickets para ver tickets creados y se asigna class name en base a prioridad en datatable

--- a/src/views/pages/tickets.html
+++ b/src/views/pages/tickets.html
@@ -107,55 +107,20 @@
             </div>
 
             <div class="table-responsive">
-                <table id="ticketTable" class="table table-hover table-bordered align-middle text-center">
+                <table id="ticketsTable" class="table table-hover table-bordered align-middle text-center">
                     <thead class="table-thead-color">
                     <tr>
                         <th>No. de Ticket</th>
-                        <th>Fecha</th>
-                        <th>Nombre</th>
+                        <th>Fecha Creación</th>
+                        <th>Solicitado Por</th>
                         <th>Asunto</th>
                         <th>Estado</th>
-                        <th>Última respuesta</th>
+                        <th>Última Respuesta</th>
                         <th>Prioridad</th>
+                        <th>Acciones</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td><a href="detalle_ticket.html?q=8VT-PZU-BRG9">8VT-PZU-BRG9</a></td>
-                        <td>04 May 21</td>
-                        <td>Klemen</td>
-                        <td>Ticket priority Critical</td>
-                        <td>Nuevo</td>
-                        <td>Klemen</td>
-                        <td><span class="priority-tag priority-critical">Crítica</span></td>
-                    </tr>
-                    <tr>
-                        <td><a href="detalle_ticket.html?q=8VT-PZU-BRG9">PBG-J12-UJ9W</a></td>
-                        <td>04 May 21</td>
-                        <td>Klemen</td>
-                        <td>Ticket priority High</td>
-                        <td>Nuevo</td>
-                        <td>Klemen</td>
-                        <td><span class="priority-tag priority-high">Alta</span></td>
-                    </tr>
-                    <tr>
-                        <td><a href="detalle_ticket.html?q=8VT-PZU-BRG9">GST-MBA-DYA6</a></td>
-                        <td>04 May 21</td>
-                        <td>Klemen</td>
-                        <td>Ticket priority Medium</td>
-                        <td>Nuevo</td>
-                        <td>Klemen</td>
-                        <td><span class="priority-tag priority-medium">Media</span></td>
-                    </tr>
-                    <tr>
-                        <td><a href="detalle_ticket.html?q=8VT-PZU-BRG9">MN9-GNE-WX1D</a></td>
-                        <td>04 May 21</td>
-                        <td>Klemen</td>
-                        <td>Ticket priority Low</td>
-                        <td>Nuevo</td>
-                        <td>Klemen</td>
-                        <td><span class="priority-tag priority-low">Baja</span></td>
-                    </tr>
                     </tbody>
                 </table>
             </div>
