fix: Se agrega nivel de seniority en usuarios

--- a/src/views/pages/usuarios.html
+++ b/src/views/pages/usuarios.html
@@ -114,6 +114,7 @@
                         <th>Correo</th>
                         <th>Rol ID</th>
                         <th>Nombre Rol</th>
+                        <th>Nivel de Soporte</th>
                         <th>Acciones</th>
                     </tr>
                     </thead>
