--- a/src/views/pages/roles.html
+++ b/src/views/pages/roles.html
@@ -46,7 +46,7 @@
         <div class="container-fluid p-5">
             <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center gap-3 mb-4">
                 <h5 class="mb-0">Gestión de Roles</h5>
-                <button class="btn btn-secondary" onclick="mostrarModalRol()"><i class="bi bi-plus-circle me-2"></i>Crear
+                <button class="btn btn-secondary" onclick="showRolModal()"><i class="bi bi-plus-circle me-2"></i>Crear
                     Rol
                 </button>
             </div>
@@ -62,7 +62,8 @@
                                     aria-label="Cerrar"></button>
                         </div>
                         <div class="modal-body">
-                            <form id="formNuevoRol">
+                            <div id="formNuevoRol">
+                                <input type="text" id="roleId" hidden>
                                 <div class="mb-3">
                                     <label for="nombreRol" class="form-label">Nombre del Rol</label>
                                     <input type="text" class="form-control rounded-3" id="nombreRol"
@@ -81,11 +82,11 @@
                                     <small class="text-muted">Usa Ctrl (Windows) o Cmd (Mac) para seleccionar
                                         varios.</small>
                                 </div>
-                            </form>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                            <button type="button" class="btn btn-secondary">Guardar Rol</button>
+                            <button type="button" class="btn btn-secondary" id="btnSaveRol">Guardar Rol</button>
                         </div>
                     </div>
                 </div>
@@ -113,11 +114,6 @@
 <script>
     function toggleSidebar() {
         document.getElementById('sidebar').classList.toggle('show');
-    }
-
-    function mostrarModalRol() {
-        const modal = new bootstrap.Modal(document.getElementById('modalAgregarRol'));
-        modal.show();
     }
 </script>
 
