feat: se agrega asignación de categorías, de detalle de tickets y de asignación manual de soporte técnico por nivel de seniority

--- a/src/views/pages/detalle_ticket.html
+++ b/src/views/pages/detalle_ticket.html
@@ -70,7 +70,7 @@
                         <p><strong>Prioridad:</strong> <span id="ticket-priority" class="priority-tag"></span></p>
                         <p><strong>Categoría:</strong> <span id="ticket-category"></span></p>
                         <p><strong>Agente Sugerido:</strong> <span id="bot-agent"></span></p>
-                        <p><strong>Razonamiento: </strong><span id="bot-reasoning"></span></p>
+                        <p><strong>Conclusión: </strong><span id="bot-reasoning"></span></p>
                         <p><strong>Pasos para solución: </strong><span id="bot-solution"></span></p>
                         <p><strong>Palabras Clave Detectadas: </strong><span id="bot-keywords"></span></p>
                     </div>
@@ -127,9 +127,9 @@
                             <label for="nivelSoporte" class="form-label">Nivel de seniority</label>
                             <select class="form-select rounded-3" id="nivelSoporte">
                                 <option selected disabled>Seleccionar nivel...</option>
-                                <option value="junior">SOPORTE JUNIOR</option>
-                                <option value="mid">SOPORTE MID</option>
-                                <option value="senior">SOPORTE SENIOR</option>
+                                <option value="SOPORTE JUNIOR">SOPORTE JUNIOR</option>
+                                <option value="SOPORTE MEDIO">SOPORTE MEDIO</option>
+                                <option value="SOPORTE SENIOR">SOPORTE SENIOR</option>
                             </select>
                         </div>
                         <div class="mb-3">
