--- a/src/views/pages/tickets.html
+++ b/src/views/pages/tickets.html
@@ -70,14 +70,6 @@
                                     <input type="date" class="form-control rounded-3" id="fecha">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre" class="form-label">Nombre</label>
-                                    <select class="form-select rounded-3" id="nombre">
-                                        <option selected>Seleccionar usuario</option>
-                                        <option value="Klemen">Klemen</option>
-                                        <option value="Otro">Otro</option>
-                                    </select>
-                                </div>
-                                <div class="mb-3">
                                     <label for="asunto" class="form-label">Asunto</label>
                                     <input type="text" class="form-control rounded-3" id="asunto"
                                            placeholder="Describe el asunto">
@@ -90,10 +82,6 @@
                                 <div class="mb-3">
                                     <label for="categoria" class="form-label">Categoría</label>
                                     <select class="form-select rounded-3" id="categoria">
-                                        <option selected>Seleccionar categoría</option>
-                                        <option value="Soporte">Soporte</option>
-                                        <option value="Acceso">Acceso</option>
-                                        <option value="Otro">Otro</option>
                                     </select>
                                 </div>
                             </form>
@@ -110,12 +98,12 @@
                 <table id="ticketsTable" class="table table-hover table-bordered align-middle text-center">
                     <thead class="table-thead-color">
                     <tr>
-                        <th>No. de Ticket</th>
+                        <th title="Ver ticket">No. de Ticket</th>
                         <th>Fecha Creación</th>
                         <th>Solicitado Por</th>
+                        <th>Asignado a</th>
                         <th>Asunto</th>
                         <th>Estado</th>
-                        <th>Última Respuesta</th>
                         <th>Prioridad</th>
                         <th>Acciones</th>
                     </tr>
