fix: se agregan fixs para mejor rendimiento y visual version 2

--- a/src/views/pages/detalle_ticket.html
+++ b/src/views/pages/detalle_ticket.html
@@ -74,8 +74,10 @@
                             <p><strong>Categoría:</strong> <span id="ticket-category"></span></p>
                             <p><strong>Agente Sugerido:</strong> <span id="bot-agent"></span></p>
                             <p><strong>Conclusión: </strong><span id="bot-reasoning"></span></p>
-                            <p><strong>Pasos para solución: </strong></p>
-                            <ul id="bot-solution" class="mb-3 ps-3"></ul>
+                            <div class="alert alert-secondary shadow-sm rounded-3" role="alert">
+                                <strong>Pasos para solución:</strong>
+                                <ul id="bot-solution" class="mb-0 mt-2 ps-3"></ul>
+                            </div>
                             <p><strong>Palabras Clave Detectadas: </strong><span id="bot-keywords"></span></p>
                         </div>
                     </div>
